lowered z-index of active page number to prevent it from showing when properties form is visible, re #1329

--- a/arches/app/media/css/arches-nifty.css
+++ b/arches/app/media/css/arches-nifty.css
@@ -4401,6 +4401,10 @@ div.row.widget-wrapper {
     transition: all .5s;
 }
 
+.related-resources-container .pagination .active a {
+    z-index: 1;
+}
+
 .relation-properties-buttons {
     display: flex;
     flex-direction: row;
